cabal-version: >=1.10
name: marlowe-dashboard-server
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
author: David Smith, Hernán Rajchert
category: Web
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/marlowe-cardano

library
    default-extensions: NoImplicitPrelude
    exposed-modules:
        Marlowe.Run.API
        Marlowe.Run.Env
        Marlowe.Run.Server
        Marlowe.Run.Wallet.V1.API
        Marlowe.Run.Wallet.V1.Types
        Marlowe.Run.Wallet.V1.CentralizedTestnet.Types
        Marlowe.Run.Wallet.V1.Client
        Marlowe.Run.WebSocket
    other-modules:
        Marlowe.Run
        Marlowe.Run.Wallet.V1
        Marlowe.Run.Wallet.V1.CentralizedTestnet.API
        Marlowe.Run.Wallet.V1.CentralizedTestnet.Server
        Marlowe.Run.Wallet.V1.Server
        Paths_marlowe_dashboard_server
    hs-source-dirs:
        src
    default-language: Haskell2010
    ghc-options: -fwarn-unused-imports
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        bytestring -any,
        containers -any,
        cardano-addresses -any,
        cardano-wallet-core -any,
        cardano-prelude -any,
        co-log-core,
        co-log >= 0.4.0 && < 0.5,
        errors,
        http-client -any,
        http-client-tls -any,
        monad-logger -any,
        mtl -any,
        playground-common -any,
        plutus-ledger -any,
        plutus-ledger-api -any,
        plutus-tx -any,
        plutus-pab -any,
        plutus-contract -any,
        prelude-safeenum -any,
        regex-compat -any,
        servant >= 0.16,
        servant-client -any,
        servant-client-core -any,
        servant-server -any,
        servant-websockets -any,
        text -any,
        text-class -any,
        transformers -any,
        wai-app-static -any,
        wai-cors -any,
        websockets -any,
        uuid -any

executable marlowe-dashboard-server
    main-is: Main.hs
    other-modules:
        Webserver
        Verbosity
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends:
        aeson,
        base,
        co-log-core,
        co-log >= 0.4.0 && < 0.5,
        errors,
        http-client,
        http-types,
        marlowe,
        marlowe-dashboard-server,
        monad-logger,
        optparse-applicative,
        prelude-safeenum -any,
        servant-client,
        servant-server,
        text,
        wai,
        warp

executable psgenerator
    main-is: PSGenerator.hs
    hs-source-dirs:
        tools,
        ../marlowe/pab
    other-modules:
        MarloweContract
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
    build-depends:
        aeson,
        base,
        data-default,
        freer-simple,
        lens,
        marlowe,
        marlowe-dashboard-server,
        optparse-applicative,
        openapi3,
        playground-common,
        plutus-pab,
        plutus-pab-executables,
        prettyprinter,
        purescript-bridge,
        servant-purescript,
        text

test-suite marlowe-dashboard-server-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any
