cabal-version: 3.0
name:          marlowe-integration-tests
version:       0.1.0.0
synopsis:      End to end integration tests for the Marlowe Runtime
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
category:      Language
license-files:
  LICENSE
  NOTICE

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-integration-tests


common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities -threaded

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


executable marlowe-integration-tests
  import:             lang
  hs-source-dirs:     test
  main-is:            Spec.hs
  other-modules:
    Language.Marlowe.Runtime.CliSpec
    Language.Marlowe.Runtime.Integration.ApplyInputs
    Language.Marlowe.Runtime.Integration.Basic
    Language.Marlowe.Runtime.Integration.Common
    Language.Marlowe.Runtime.Integration.Contract
    Language.Marlowe.Runtime.Integration.Create
    Language.Marlowe.Runtime.Integration.Intersections
    Language.Marlowe.Runtime.Integration.MarloweQuery
    Language.Marlowe.Runtime.Integration.StandardContract
    Language.Marlowe.Runtime.Integration.Withdraw
    Language.Marlowe.Runtime.IntegrationSpec
    Language.Marlowe.Runtime.Web.Common
    Language.Marlowe.Runtime.Web.Contracts.Contract.GetContract
    Language.Marlowe.Runtime.Web.Contracts.Contract.PostContract
    Language.Marlowe.Runtime.Web.Contracts.Contract.PutContract
    Language.Marlowe.Runtime.Web.Contracts.GetContracts
    Language.Marlowe.Runtime.Web.Contracts.Transactions.GetTransactions
    Language.Marlowe.Runtime.Web.Contracts.Transactions.Transaction.GetTransaction
    Language.Marlowe.Runtime.Web.Contracts.Transactions.Transaction.PostTransaction
    Language.Marlowe.Runtime.Web.Contracts.Transactions.Transaction.PutTransaction
    Language.Marlowe.Runtime.Web.StandardContract
    Language.Marlowe.Runtime.Web.Withdrawal.PostWithdrawal
    Language.Marlowe.Runtime.Web.Withdrawal.PutWithdrawal
    Language.Marlowe.Runtime.WebSpec

  build-depends:
    , aeson
    , async-components
    , base                                                                                                     >=4.9     && <5
    , base16
    , bytestring
    , cardano-api
    , co-log                                                                                                   >=0.5.0.0 && <0.6.0.0
    , containers
    , eventuo11y-extras
    , hspec
    , http-types
    , marlowe-cardano
    , marlowe-chain-sync:{marlowe-chain-sync, plutus-compat}
    , marlowe-client
    , marlowe-integration
    , marlowe-protocols
    , marlowe-runtime-web:{marlowe-runtime-web, server}
    , marlowe-runtime:{marlowe-runtime, contract, contract-api, discovery-api, history-api, sync-api, tx-api}
    , marlowe-test
    , mtl
    , network-uri
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , resourcet
    , servant-client
    , servant-pagination
    , text
    , time
    , transformers
    , typed-protocols
    , unliftio

  build-tool-depends: hspec-discover:hspec-discover
