cabal-version: 3.0
name:          marlowe-integration
version:       0.1.0.0
synopsis:      Run integration tests in the context of a marlowe runtime
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-integration

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  exposed-modules:
    Test.Integration.Marlowe
    Test.Integration.Marlowe.Local

  build-depends:
    , aeson
    , async
    , async-components
    , base >=4.9 && <5
    , bytestring
    , cardano-api
    , cardano-crypto-wrapper
    , cardano-integration
    , cardano-ledger-byron
    , co-log >=0.5.0.0 && <0.6.0.0
    , containers
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras
    , exceptions
    , general-allocate
    , hasql
    , hasql-pool
    , http-client
    , marlowe-chain-sync:{marlowe-chain-sync, chain-indexer, libchainsync}
    , marlowe-cli
    , marlowe-client
    , marlowe-protocols
    , marlowe-runtime-web:{marlowe-runtime-web, server}
    , marlowe-runtime:{marlowe-runtime, contract, contract-api, discovery-api, history-api, indexer, proxy, proxy-api, sync, sync-api, tx, tx-api}
    , mtl >=2.2 && <3
    , network
    , nonempty-containers
    , ouroboros-network
    , postgresql-libpq
    , process
    , random
    , resourcet
    , servant-client
    , stm
    , text
    , time
    , time-units
    , transformers
    , typed-protocols
    , unliftio
    , warp

executable marlowe-integration-example
  default-language:   Haskell2010
  hs-source-dirs:     app
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  main-is:            Main.hs
  build-depends:
    , aeson
    , base >=4.9 && <5
    , cardano-api
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-integration
    , marlowe-runtime-web
    , text
