cabal-version: 3.4
name:          marlowe-integration
version:       0.1.0.0
synopsis:      Run integration tests in the context of a marlowe runtime
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-integration

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  exposed-modules:
    Test.Integration.Marlowe
    Test.Integration.Marlowe.Local

  build-depends:
    , aeson
    , async
    , async-components
    , base >=4.9 && <5
    , bytestring
    , cardano-api ^>=9.2
    , cardano-crypto-wrapper
    , cardano-integration
    , cardano-ledger-byron
    , co-log
    , containers
    , deepseq
    , eventuo11y >=0.9 && <0.11
    , eventuo11y-extras
    , eventuo11y-otel ^>=0.1
    , exceptions
    , hasql
    , hasql-pool
    , hs-opentelemetry-api ^>=0.0.3
    , http-client
    , marlowe-chain-sync
    , marlowe-chain-sync:chain-indexer
    , marlowe-chain-sync:libchainsync
    , marlowe-cli
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime-web
    , marlowe-runtime-web:server
    , marlowe-runtime:contract
    , marlowe-runtime:indexer
    , marlowe-runtime:proxy-api
    , marlowe-runtime:runtime
    , marlowe-runtime:sync
    , marlowe-runtime:tx
    , network
    , nonempty-containers
    , postgresql-libpq
    , process
    , random
    , resourcet
    , retry
    , servant-client
    , text
    , time-units
    , transformers
    , typed-protocols
    , unliftio
    , warp
