cabal-version: 3.0
name:          marlowe-object
version:       0.1.0.0
synopsis:      Object format for Marlowe contracts.
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-object

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

  exposed-modules:    Language.Marlowe.Object
  build-depends:
    , aeson >=2 && <3
    , aeson-applicative ==0.1.0.0
    , base >=4.9 && <5
    , base16 ^>=0.3.2
    , binary ^>=0.8.8
    , bytestring >=0.10.12 && <0.12
    , cardano-api ==1.35.4
    , plutus-ledger-api ==1.0.0.1
    , row-types
    , text >=1.2.4 && <2
    , time >=1.9 && <2
    , unliftio ^>=0.2.1
