cabal-version: 3.0
name:          marlowe-object
version:       0.1.0.0
synopsis:      Object format for Marlowe contracts.
bug-reports:   https://github.com/input-output-hk/marlowe-marlowe/issues
license:       Apache-2.0
author:        Jamie Bertram
maintainer:    jamie.bertram@iohk.io
stability:     experimental
category:      Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir:   marlowe-object

common lang
  default-language:   Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules: Language.Marlowe.Object.Types
  build-depends:
    , aeson >=2 && <3
    , aeson-applicative ==0.1.0.0
    , base >=4.9 && <5
    , base16 ^>=0.3.2
    , binary ^>=0.8.8
    , bytestring >=0.10.12 && <0.12
    , cardano-api ==1.35.4
    , marlowe-cardano ==0.1.1.0
    , marlowe-protocols ==0.1.1.0
    , plutus-ledger-api ==1.0.0.1
    , text >=1.2.4 && <2
    , time >=1.9 && <2

test-suite marlowe-object-test
  import:             lang
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      Language.Marlowe.Object.TypesSpec
  build-depends:
    , aeson >=2 && <3
    , base >=4.9 && <5
    , binary ^>=0.8.8
    , bytestring >=0.10.12 && <0.12
    , cardano-api:gen ==1.35.4
    , hedgehog-quickcheck ^>=0.1
    , hspec
    , lens
    , marlowe-object
    , marlowe-test ==0.1.2.0
    , QuickCheck >=2.14 && <3
    , quickcheck-classes
    , quickcheck-instances ^>=0.3.29

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded
