cabal-version:   3.0
name:            marlowe-plutus
version:         0.1.0.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

build-type:      Simple
maintainer:      brian.bush@iohk.io
stability:       experimental
author:          Alexander Nemish
synopsis:        Marlowe plutus validators
category:        Language
extra-doc-files:
  CHANGELOG.md
  README.md

data-dir:        benchmarks
data-files:
  rolepayout/*.benchmark
  semantics/*.benchmark

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marlowe-cardano

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

flag trace-plutus
  description: Enable Plutus trace log for Marlowe validators.
  default:     False
  manual:      True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Werror

library
  import:          lang
  hs-source-dirs:  src
  visibility:      public
  build-depends:
    , base >=4.9 && <5
    , bytestring >=0.10.12 && <0.12
    , marlowe-cardano ==0.1.2.0
    , plutus-ledger-api ==1.0.0.1
    , plutus-script-utils ==1.2.0.0
    , plutus-tx ==1.0.0.0
    , plutus-tx-plugin ==1.0.0.0
    , serialise ^>=0.2.6

  exposed-modules: Language.Marlowe.Scripts

  if flag(trace-plutus)
    cpp-options: -DTRACE_PLUTUS

executable marlowe-validators
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Benchmark.Marlowe
    Benchmark.Marlowe.RolePayout
    Benchmark.Marlowe.Semantics
    Benchmark.Marlowe.Types
    Benchmark.Marlowe.Util
    Paths_marlowe_plutus

  build-depends:
    , base
    , base16-bytestring
    , bytestring
    , cardano-binary
    , containers
    , directory
    , filepath
    , marlowe-cardano
    , marlowe-plutus
    , mtl
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text
