cabal-version: 3.0
name: marlowe-protocols
version: 0.0.0.0
synopsis:
  Protocol definitions for Marlowe
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-protocols

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Network.Channel
    Network.Protocol.Driver
    Network.Protocol.ChainSeek.Client
    Network.Protocol.ChainSeek.Codec
    Network.Protocol.ChainSeek.Server
    Network.Protocol.ChainSeek.Types
    Network.Protocol.Job.Client
    Network.Protocol.Job.Codec
    Network.Protocol.Job.Server
    Network.Protocol.Job.Types
    Network.Protocol.Query.Client
    Network.Protocol.Query.Codec
    Network.Protocol.Query.Server
    Network.Protocol.Query.Types
    Network.Protocol.Codec
    Network.Protocol.SchemaVersion
    Network.Protocol.SchemaVersion.TH
  build-depends:
      base >= 4.9 && < 5
    , async
    , binary
    , bytestring
    , hashable
    , network
    , template-haskell
    , text
    , typed-protocols

test-suite marlowe-protocols-test
  import: lang
  hs-source-dirs:
    test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Network.Protocol.Job.CodecSpec
    Paths_marlowe_protocols
  build-depends:
      base >= 4.9 && < 5
    , async
    , binary
    , bytestring
    , cardano-api
    , containers
    , hspec
    , marlowe
    , marlowe-protocols
    , plutus-tx
    , plutus-ledger-api
    , QuickCheck
    , some
    , stm
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , transformers
    , typed-protocols
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded
