cabal-version: 3.0
name: marlowe-protocols
version: 0.0.0.0
synopsis:
  Protocol definitions for Marlowe
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-protocols

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wunused-packages


library
  import: lang
  hs-source-dirs:   src
  exposed-modules:
    Network.Channel
    Network.Protocol.Driver
    Network.Protocol.ChainSeek.Client
    Network.Protocol.ChainSeek.Codec
    Network.Protocol.ChainSeek.Server
    Network.Protocol.ChainSeek.Types
    Network.Protocol.ChainSeek.TH
    Network.Protocol.Job.Client
    Network.Protocol.Job.Codec
    Network.Protocol.Job.Server
    Network.Protocol.Job.Types
    Network.Protocol.Query.Client
    Network.Protocol.Query.Codec
    Network.Protocol.Query.Server
    Network.Protocol.Query.Types
    Network.Protocol.Codec
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , base16
    , binary
    , bytestring
    , eventuo11y
    , eventuo11y-extras
    , hashable
    , lifted-base
    , monad-control
    , network
    , stm
    , template-haskell
    , text
    , transformers-base
    , typed-protocols

test-suite marlowe-protocols-test
  import: lang
  hs-source-dirs:
    test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Network.Protocol.ChainSeek.CodecSpec
    Network.Protocol.Job.CodecSpec
    Network.Protocol.Query.CodecSpec
    Paths_marlowe_protocols
  build-depends:
      base >= 4.9 && < 5
    , binary
    , hspec
    , marlowe-protocols
    , QuickCheck
    , text
    , typed-protocols
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -threaded
