cabal-version: 3.0
name: marlowe-protocols
version: 0.0.0.0
synopsis:
  Protocol definitions for Marlowe
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-protocols

library
  default-language: Haskell2010
  hs-source-dirs:   src
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
    -Wunused-packages
  exposed-modules:
    Network.Channel
    Network.Protocol.ChainSeek.Client
    Network.Protocol.ChainSeek.Server
    Network.Protocol.ChainSeek.TH
    Network.Protocol.ChainSeek.Types
    Network.Protocol.Codec
    Network.Protocol.Codec.Spec
    Network.Protocol.Connection
    Network.Protocol.Driver
    Network.Protocol.Handshake.Client
    Network.Protocol.Handshake.Server
    Network.Protocol.Handshake.Types
    Network.Protocol.Job.Client
    Network.Protocol.Job.Server
    Network.Protocol.Job.Types
    Network.Protocol.Peer
    Network.Protocol.Query.Client
    Network.Protocol.Query.Server
    Network.Protocol.Query.Types
    Observe.Event.Network.Protocol
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , async-components
    , base16
    , binary
    , bytestring
    , eventuo11y ^>= { 0.9, 0.10 }
    , eventuo11y-extras
    , general-allocate ^>= { 0.2 }
    , hashable
    , lifted-base
    , monad-control
    , network
    , network-run
    , stm
    , QuickCheck
    , text
    , transformers-base
    , typed-protocols
