cabal-version: 3.0
name: marlowe-runtime-cli
version: 0.0.1
synopsis:
  A command line interface for the Marlowe Runtime.
bug-reports: https://github.com/input-output-hk/marlowe-cardano/issues
license: Apache-2.0
author: Jamie Bertram
maintainer: jamie.bertram@iohk.io
stability: experimental
category: Language
license-files:
  LICENSE
  NOTICE

source-repository head
  type: git
  location: https://github.com/input-output-hk/marlowe-cardano
  subdir: marlowe-runtime-cli

common lang
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    ExplicitForAll
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TupleSections
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

executable marlowe-runtime-cli
  import: lang
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    Language.Marlowe.Runtime.CLI.Command
    Language.Marlowe.Runtime.CLI.Command.Apply
    Language.Marlowe.Runtime.CLI.Command.Create
    Language.Marlowe.Runtime.CLI.Command.Log
    Language.Marlowe.Runtime.CLI.Command.Submit
    Language.Marlowe.Runtime.CLI.Command.Tx
    Language.Marlowe.Runtime.CLI.Command.Withdraw
    Language.Marlowe.Runtime.CLI.Env
    Language.Marlowe.Runtime.CLI.Monad
    Paths_marlowe_runtime_cli
  autogen-modules:
    Paths_marlowe_runtime_cli
  build-depends:
      aeson
    , base >= 4.9 && < 5
    , ansi-terminal
    , base16
    , bytestring
    , cardano-api
    , containers
    , errors
    , marlowe-cardano
    , marlowe-chain-sync
    , marlowe-client
    , marlowe-protocols
    , marlowe-runtime
    , marlowe-runtime:config
    , marlowe-runtime:tx-api
    , marlowe-runtime:history-api
    , marlowe-runtime:proxy-api
    , monad-control
    , mtl
    , network
    , plutus-ledger-api
    , transformers
    , transformers-base
    , optparse-applicative
    , stm
    , stm-delay
    , text
    , time
    , wl-pprint
    , yaml
  if !os(windows)
    build-depends: unix
